finish webpage functionality

--- a/partials/courses.students.html
+++ b/partials/courses.students.html
@@ -7,7 +7,7 @@
   </ul>
 </div>
 
-<div>
+<div ng-show="course">
   <h2>Add a student to {{ course.name }}</h2>
   <form ng-submit="addStudent()" class="form-inline" role="form">
     <div class="form-group">
